recursion.cons.butlast.ButLast.scala.error
Compilation error:
ButLast:6: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.tail.tail == Nil)
  ^