recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]): List[Int] = {
  
  
  
  if(l.tail.tail == Nil)
  {
    return butLast(l);
  }
  
  
  
}